[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
serde = {version = "1.0.210", features=["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
axum-server = "0.7.1"
tokio = { version = "1.40.0", features = ["full"] }
mime = "0.3.17"

[dev-dependencies]
headless_chrome = "1.0.15"